# ChangeLog for sys-devel/libperl
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/libperl/ChangeLog,v 1.137 2008/08/02 12:51:38 pchrist Exp $

  02 Aug 2008; Panagiotis Christopoulos <pchrist@gentoo.org> metadata.xml:
  Update metadata.xml to include USE flag descriptions. Entries taken from
  profiles/use.local.desc. GLEP 56

  18 Jul 2008; Javier Villavicencio <the_paya@gentoo.org>
  files/libperl-5.8.8-fbsdhints.patch:
  Updated fbsdhints patch, bug 225323.

  16 May 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  libperl-5.8.8-r2.ebuild:
  ppc stable, bug #219203

  15 May 2008; Raúl Porcel <armin76@gentoo.org> libperl-5.8.8-r2.ebuild:
  alpha/ia64 stable wrt security #219203

  14 May 2008; Markus Meier <maekke@gentoo.org> libperl-5.8.8-r2.ebuild:
  amd64 stable, bug #219203

  14 May 2008; Christian Faulhammer <opfer@gentoo.org>
  libperl-5.8.8-r2.ebuild:
  stable x86, security bug 219203

  14 May 2008; Markus Rothe <corsair@gentoo.org> libperl-5.8.8-r2.ebuild:
  Stable on ppc64; bug #219203

  14 May 2008; Jeroen Roovers <jer@gentoo.org> libperl-5.8.8-r2.ebuild:
  Stable for HPPA (bug #219203).

  14 May 2008; Ferris McCormick <fmccor@gentoo.org> libperl-5.8.8-r2.ebuild:
  Sparc stable, Security Bug #219203.

*libperl-5.8.8-r2 (09 May 2008)

  09 May 2008; Torsten Veller <tove@gentoo.org>
  +files/libperl-5.8.8-CVE-2008-1927.patch,
  +files/libperl-5.8.8-utf8-boundary.patch, +libperl-5.8.8-r2.ebuild:
  #219203 - Version bump. Added patch from bug #198196. Apply
  libperl-5.8.8-lib64.patch for ppc64 too like dev-lang/perl-5.8.8.

  06 Aug 2007; <truedfx@gentoo.org>
  +files/libperl-5.8.8-makedepend-syntax.patch, libperl-5.8.8-r1.ebuild:
  Fix syntax error in makedepend.SH

  30 Apr 2007; <solar@gentoo.org> ChangeLog:
  - filter ssp on ia64 due to ICE in compiler. revisit when we have a working
  hardened gcc-4.x

  17 Feb 2007; Fabian Groffen <grobian@gentoo.org> libperl-5.8.8-r1.ebuild: