@@ -28,9 +28,7 @@ AUX libperl-create-libperl-soname.patch 417 RMD160 ea221c4f1a284ad28b30e93542228
 AUX libperl-darwin-install_name.patch 404 RMD160 343c4cd6363976a19fd87ab16bc931e549ffbf7b SHA1 24fb298d9ce8386505d9a128047dd6cd4d89ded2 SHA256 f3306a6c2b848d3f7744c4dc726d19c9b13f08ecc011642bf7b87fbeef627780
 AUX libperl-noksh.patch 611 RMD160 6ddb9e7140c60e05042c3c488c97399a86f965fc SHA1 61bf5bb0955bd04a758d1381fa4260ed9fdbb1d1 SHA256 0861f7f54c184e99a0ffeebeab9420d969d2002f921bc3fb14841a1e24be1f5e
 AUX perl-hppa-pa7200-configure.patch 446 RMD160 ab902e2b5cf7f96023e0e267f170401b036dd4f5 SHA1 fcb7e61cdf1ce1c9993f257507b3289ce45382d7 SHA256 4fe6a010dbdc39325f4003e7ccd02cb7996b4a99b64ab0fa8b12d6fe67f87a31
-DIST perl-5.10.0.tar.gz 15595020 RMD160 c6614fc99a162790a703f91085b24a60af903ba2 SHA1 adf73606dd5248af7ccdd735bcaa0e628ea75b3c SHA256 94464a0d374fa63226eee56e0bb3d35564f9d8391a1a8d9f0055805ec25f3b2e
 DIST perl-5.8.8.tar.bz2 10123359 RMD160 e78f26d9b96e6db35f946ad4ff55e3a69385c71b SHA1 4aab490040727ca4419098720eca2ba4367df539 SHA256 818a140d9c04ea8dab3a05104b34ced7f7d9d0a91bfed91baf89a84d0dfb1bc9
-EBUILD libperl-5.10.0.ebuild 13633 RMD160 75a79f356adf1303dc62aa3476b1efbbd669bd29 SHA1 bfa646f35eedf3fee744568f671d21e4e601a463 SHA256 9a678e8dc4097c7f356a841c715ceb0b86ecaf487a24498f1ff8b1f4c60aa924
-EBUILD libperl-5.8.8-r2.ebuild 14598 RMD160 6090e2c1f724a09aa5c34e76e82291924b509357 SHA1 aaf1df6b3edf0c639538df1b8dd4026e140e75fa SHA256 49e8921aae8095a6bc520fba0230d5f2b34637db76d89379c81ad2061fe78f07
-MISC ChangeLog 19953 RMD160 1b47465e10eb34bccc99c9b7e7156cfac045c047 SHA1 6a4a5b10d0147b8954932bc76a2f2657eea72f1d SHA256 0398f8455f6053bc9ce9cd15c4777c88ea2355450a4e5229501cb3c7a71dec06
+EBUILD libperl-5.8.8-r2.ebuild 14667 RMD160 e6b972a3299eb9c99edb1c1e64d8052748ab9f8e SHA1 56c45b4853522296b2eb8f28e2e0a074587e1772 SHA256 6ccdcac023493e65305d17baa5468e869b91eeebffbaaf3fff19ad367dab0651
+MISC ChangeLog 20088 RMD160 eaabbc887173f83cfc2b307b61a5995af95fe213 SHA1 c74301c5d66771aa83890c38e722ec622f34d6df SHA256 cffd378f1c60c30611b282cb1ae3f19cf9d61afe458988a50b821c1682e51c5e
 MISC metadata.xml 403 RMD160 1cda5ea2e30a403f93919ff6517319385ea1aa56 SHA1 f2f65146ecf4c7f65e707259286bea45418b65b1 SHA256 71229202663c60ee0e512c81936ceb8a9b70e95c211a4615a14592aa62ea823a
