@@ -1,6 +1,10 @@
 # ChangeLog for sys-devel/libperl
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/libperl/ChangeLog,v 1.137 2008/08/02 12:51:38 pchrist Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/libperl/ChangeLog,v 1.138 2009/05/02 13:19:14 arfrever Exp $
+
+  02 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  libperl-5.8.8-r2.ebuild:
+  Respect LDFLAGS (bug #181464).
 
   02 Aug 2008; Panagiotis Christopoulos <pchrist@gentoo.org> metadata.xml:
   Update metadata.xml to include USE flag descriptions. Entries taken from
